portal-deployment-develop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-backend-develop
  namespace: portal-app
  labels:
    app: portal-backend-develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-backend-develop
  template:
    metadata:
      labels:
        app: portal-backend-develop
    spec:
      containers:
        - name: portal-backend-develop
          image: registry.pdnco.ir/portal-backend:1.0.0
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: debug-port
              containerPort: 5005
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: portal-backend-develop
  namespace: portal-app
  labels:
    name: portal-backend-develop
spec:
  type: NodePort
  ports:
    - name: debug-port
      protocol: TCP
      port: 5005
      nodePort: 30055
      targetPort: 5005
    - name: http
      port: 7020
      protocol: TCP
      nodePort: 30056
      targetPort: 8090

  selector:
    app: portal-backend-develop
