portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-backend-prod
  namespace: portal-app
  labels:
    app: portal-backend-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-backend-prod
  template:
    metadata:
      labels:
        app: portal-backend-prod
    spec:
      containers:
        - name: portal-backend-prod
          image: registry.pdnco.ir/portal-backend:1.0.0
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: portal-backend-prod
  namespace: portal-app
  labels:
    name: portal-backend-prod
spec:
  ports:
    - port: 7020
      protocol: TCP
      targetPort: 8090
  selector:
    app: portal-backend-prod
